# invoance-python

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: integration.py  quickstart.py
examples/ai_attestations/: get_attestation.py  get_raw_attestation.py  ingest_attestation.py  list_attestations.py  verify_attestation.py  verify_signature.py
examples/documents/: anchor_document.py  get_document.py  get_document_original.py  list_documents.py  verify_document.py
examples/events/: get_event.py  ingest_event.py  list_events.py  verify_event.py
examples/traces/: __init__.py  add_event_to_trace.py  create_trace.py  delete_trace.py  export_proof.py  export_proof_pdf.py  full_workflow.py  get_trace.py  list_traces.py  seal_trace.py
invoance/: __init__.py  _version.py  client.py  config.py  errors.py  models.py
invoance/_internal/: http.py  validate.py
invoance/resources/: __init__.py  attestations.py  documents.py  events.py  traces.py
tests/: test_smoke.py
